<resources>
    <string name="app_name">Online Barter Trader</string>
    <string name="title_activity_homepage">homepage</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_for_trades">search for trades</string>
    <string name="home">Home</string>
    <string name="your_items">Your Items</string>
    <string name="new_post">New Post</string>
    <string name="saved">Saved</string>
    <string name="messages">Messages</string>
    <string name="no_saved_posts">It looks like you have no saved posts.</string>

    <!-- Strings used for registration page -->
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="ver_pass">Verify Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_from_registration">Already have an account?</string>

    <!-- Strings used for post creation page -->
    <string name="item_name">Item Name</string>
    <string name="item_desc">Item Description</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_quality">Item Quality</string>
    <string name="submit">Submit</string>
    <string name="wanting">Wanting</string>
    <string name="offering">Offering</string>
    <string name="image_upload">Image Upload</string>

    <!-- Strings used for My Posts/Edit Post page -->
    <string name="save_changes">Save Changes</string>
    <string name="no_posts">It looks like you do not have any posts. Tap Create Post below to make one.</string>
    <string name="mark_as_traded">Mark As Traded</string>
    <string name="mark_as_available">Mark As Available</string>
    <string name="edit_post">Edit Post</string>

    <!-- Strings used for profile page -->
    <string name="profile_Picture">Profile Picture</string>
    <string name="profile_save">Save</string>
    <string name="editProfile_button">Edit Profile</string>
    <string name="preferences_button">Preferences</string>
    <string name="home_button">Home</string>

    <!-- Strings for chat pages -->
    <string name="no_users_found">No users found!</string>
    <string name="write_a_message">Type a message</string>
    <string name="show_traded_items">Show Traded Items</string>
    <string name="other_user_no_posts">It looks like this user does not have any posts.</string>
    <string name="see_google_maps">See Google maps</string>

</resources>